--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -615,6 +615,15 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+.layout section {
+  margin: 0 auto;
+  padding: 0px 1.0875rem 1.45rem;
+  padding-top: 0;
+}
+.footer {
+  padding-top: 60px;
+}
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
