--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -220,7 +220,12 @@ img {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-h1, h2, h3, h4, h5, h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
@@ -550,11 +555,12 @@ pre tt:after {
 
 .layout section {
   margin: 0 auto;
-  padding: 0px 1.0875rem 1.45rem;
   padding-top: 0;
 }
 .footer {
   padding-top: 60px;
+  padding-bottom: 40px;
+  padding-left: 20px;
 }
 @media only screen and (max-width: 480px) {
   html {
